--- a/Historia.html
+++ b/Historia.html
@@ -13,7 +13,7 @@
 			
 				<div id="header">
 
-						<h1><a href="index.html" id="logo"> <img src="./images/,jpg" alt=""> <em></em></a></h1>
+					<h1><a href="index.html" id="logo"> <img src="./images/logo.jpg" alt=""> <em></em></a></h1>
 
 				
 						<nav id="nav">
