--- a/Mapas.html
+++ b/Mapas.html
@@ -10,13 +10,13 @@
 	<body class="is-preload">
 		<div id="page-wrapper">
 
-			<!-- Header -->
+			
 				<div id="header">
 
-					<!-- Logo -->
-						<h1><a href="index.html" id="logo"> <img src="./images/,jpg" alt=""> <em></em></a></h1>
+				
+					<h1><a href="index.html" id="logo"> <img src="./images/logo.jpg" alt=""> <em></em></a></h1>
 
-					<!-- Nav -->
+					
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
