se agregaron metas, modificacion de titulos

--- a/Historia.html
+++ b/Historia.html
@@ -1,9 +1,17 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Overwatch2//Historia</title>
+		<title>Overwatch2 | historia</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="keywords" content="overwatch,overwatchES,Overwatch2,overwatchlatam,heroes,mapas overwatch,pase de batalla overwatch">
+		<meta name="description" content="overwatch es un juego free to play en el cual tenes variedad de modos de juegos, personajes para elegir y mucha diversion en cada partida, aca ademas podes ver toda su historia, como la de sus personajes y una explicacion a cada uno de sus modalides de juego ">
+		<meta property="og:type" content="Web site">
+		<meta property="og:title" content="Overwatch2">
+		<meta property="og:url" content="url de la pagina subida al servidor">
+		<meta property="og:description" content="overwatch es un juego free to play en el cual tenes variedad de modos de juegos, personajes para elegir y mucha diversion en cada partida, aca ademas podes ver toda su historia, como la de sus personajes y una explicacion a cada uno de sus modalides de juego">
+		
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="./images/icono1.jpg" >
 	</head>
@@ -67,7 +75,7 @@
 
 												<span class="image featured"><img src="images/historia/2.jpg" alt="" /></span>
 
-											<h2>El anochecer</h2>
+											<h2>Los años del crepusculo</h2>
 											<h4>Veinte años habían pasado desde su fundación, y con el tiempo la influencia de Overwatch había disminuido, además se encontrarse bajo sospecha de corrupción y sedición. La organización fue acusada de negligencias en importantes misiones, corrupción y mala gestión, proliferación de armas, abusos de derechos humanos y cosas aún peores. A Overwatch nunca le habían faltado detractores, incluso en su época dorada, pero ahora eran más críticos que nunca y exigían que un grupo tan poderoso tuviese un control estricto. Se levantaron rumores de misiones secretas encubiertas, que llevaban a cabo misiones tales como asesinatos, secuestros y coacción, que la gente consideró que eran fantasías conspiranoicas. Pero a medida que pasaba el tiempo, las críticas se hacían más complicadas de ignorar. Las controvertidas misiones avivaron la indignación pública y algunos de los agentes más famosos de Overwatch se vieron obligados a retirarse antes de caer en desgracia. Las protestas estallaron pidiendo el cese de la organización; después de años de servicio, ahora la gente consideraba que Overwatch era el problema del mundo. El incidente de Venecia fue la gota que colmó el vaso, saliendo Blackwatch a la luz. Cuando se descubrió que la deshonrada científica Moira O’deorain había estado trabajando para ellos, de poco sirvió que los altos mandos de Overwatch negasen cualquier conocimiento de ello. Años más tarde, la periodista Olympia Shaw, experta en Overwatch, reflexionó que si ese hubiese sido el final de la organización, con el paso del tiempo la gente habría aceptado aquello como pasos en falso inevitables por la burocracia envejecida y la necesidad de un cambio de mando, y los habría perdonado. Pero no fue así.  </h4>
 
 											<span class="image featured"><img src="images/historia/3.jpg" alt="" /></span>
@@ -81,7 +89,7 @@
 										
 												<span class="image featured"><img src="images/historia/4.jpg" alt="" /></span>
 											
-											<h2>El anochecer</h2>
+											<h2>La caída</h2>
 											<h4>
 											En los últimos años de existencia de Overwatch, Blackwatch salió a la luz, acompañado de historias de asesinatos, coacciones, secuestros, torturas y cosas peores. Los gobiernos de todo el mundo pidieron a las Naciones Unidas que pusiesen punto y final a Overwatch, alegando “violaciones agresivas y reiteradas de la soberanía de incontables países”.
 
