--- a/Mapas.html
+++ b/Mapas.html
@@ -1,9 +1,17 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Overwatch2//Mapas</title>
+		<title>Overwatch2 | mapas</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="keywords" content="overwatch,overwatchES,Overwatch2,overwatchlatam,heroes,mapas overwatch,pase de batalla overwatch">
+		<meta name="description" content="overwatch es un juego free to play en el cual tenes variedad de modos de juegos, personajes para elegir y mucha diversion en cada partida, aca ademas podes ver toda su historia, como la de sus personajes y una explicacion a cada uno de sus modalides de juego ">
+		<meta property="og:type" content="Web site">
+		<meta property="og:title" content="Overwatch2">
+		<meta property="og:url" content="url de la pagina subida al servidor">
+		<meta property="og:description" content="overwatch es un juego free to play en el cual tenes variedad de modos de juegos, personajes para elegir y mucha diversion en cada partida, aca ademas podes ver toda su historia, como la de sus personajes y una explicacion a cada uno de sus modalides de juego">
+		
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="./images/icono1.jpg" >
 	</head>
